Update android super-test for SDK changes.